Odin-Recipes styles added

--- a/recipes/baked-potatoes.html
+++ b/recipes/baked-potatoes.html
@@ -3,9 +3,11 @@
 
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Odin Recipes Baked Potatoes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
+        <a href="../index.html" class="back-link">Back to Home Page</a>
         <h1>Baked Potato</h1>
         <img src="../images/baked-potato.png" alt="Delicious homemade baked potatoes">
         <h2>Description</h2>
@@ -27,5 +29,6 @@
             <li>Wrap potatoes in foil.</li>
             <li>Bake for 1.5 hrs.</li>
         </ol>
+        <a href="../index.html" class="back-link">Back to Home Page</a>
     </body>
 </html>
