--- a/recipes/french-fries.html
+++ b/recipes/french-fries.html
@@ -3,9 +3,11 @@
 
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Odin Recipes French Fries</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
+        <a href="../index.html" class="back-link">Back to Home Page</a>
         <h1>French Fries</h1>
         <img src="../images/french-fries.png" alt="Tasty homemade french fries">
         <h2>Description</h2>
@@ -26,5 +28,6 @@
             <li>Drain and dry the sliced potatoes.</li>
             <li>Fry the potatoes until golden brown and crispy.</li>
         </ol>
+        <a href="../index.html" class="back-link">Back to Home Page</a>
     </body>
 </html>
